--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <footer>
         <p>&copy; 2025 Raja Sekhar Medindrao. All rights reserved.</p>
         <p>Licensed under Apache 2.0.</p>
-        <p>Developed by Codex + ChatGPT.</p>
+        <p>Developed with AI + Coffee.</p>
     </footer>
 </body>
 </html>
