feat(comet): move assets to CometAnimation/, fix case-sensitive paths in all pages, add hidden <img> for reliable image src, and update JS to use it; also ensure blue glow and sequential spawn work across PAGES

--- a/PAGES/CheckWeather/check-weather.html
+++ b/PAGES/CheckWeather/check-weather.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Check</title>
-        <link rel="stylesheet" href="../../styles/style.css">
+    <link rel="stylesheet" href="../../styles/style.css">
+    <link rel="stylesheet" href="../../CometAnimation/comet-animation.css">
+    <link id="comet-image-preload" rel="preload" as="image" href="../../CometAnimation/Comet.png">
         <!-- Page-specific styles inlined to keep this page self-contained -->
         <style>
         /* Minimalistic card layout and suggestions dropdown */
@@ -38,6 +40,7 @@
         </style>
 </head>
 <body class="weather-page">
+    <img id="comet-image-src" src="../../CometAnimation/Comet.png" alt="" hidden>
         <!-- Inlined header (previously components/header.html) -->
         <header class="top-nav">
             <div class="top-nav-inner">
@@ -444,6 +447,7 @@
             <p>Licensed under Apache 2.0.</p>
             <p>Developed with AI + Coffee.</p>
         </footer>
+    <script src="../../CometAnimation/comet-animation.js"></script>
 
 </body>
 </html>
