--- a/PAGES/TimerStopWatch/timer-stopwatch.html
+++ b/PAGES/TimerStopWatch/timer-stopwatch.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../../styles/style.css">
     <link rel="stylesheet" href="timer-stopwatch.css">
     <link rel="icon" type="image/x-icon" href="../../assets/timer.ico">
+    <link rel="stylesheet" href="../../CometAnimation/comet-animation.css">
+    <link id="comet-image-preload" rel="preload" as="image" href="../../CometAnimation/Comet.png">
 <body>
+    <img id="comet-image-src" src="../../CometAnimation/Comet.png" alt="" hidden>
     <!-- Inlined header (copied from CheckWeather) -->
     <header class="top-nav">
         <div class="top-nav-inner">
@@ -186,5 +189,6 @@
         <p>Licensed under Apache 2.0.</p>
         <p>Developed with AI + Coffee.</p>
     </footer>
+    <script src="../../CometAnimation/comet-animation.js"></script>
 </body>
 </html>
