chore: stage all pending changes across pages and components

--- a/PAGES/TalkWithAI/talk-with-ai.html
+++ b/PAGES/TalkWithAI/talk-with-ai.html
@@ -43,7 +43,7 @@
     <footer>
         <p>&copy; 2025 Raja Sekhar Medindrao. All rights reserved.</p>
         <p>Licensed under Apache 2.0.</p>
-        <p>Developed with AI + Coffee.</p>
+        <p>Developed with Coffee.</p>
     </footer>
     <script src="../../CometAnimation/comet-animation.js"></script>
 </body>
